@@ -1,3 +1,8 @@
+Wed Feb 26 13:26:21 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (setup_exception): preserve errinfo across calling #to_s
+	  method on the exception.  [ruby-core:61091] [Bug #9568]
+
 Wed Feb 26 01:29:27 2014  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* string.c (sym_find): Add Symbol.find(str), which returns whether given
